--- a/index.qmd
+++ b/index.qmd
@@ -11,11 +11,13 @@ This site contains instructions for how to access and utilise the [National Comp
 
 NCI systems are designed to handle complex computational tasks, such as simulations, data analysis, and modeling, for a wide range of scientific disciplines, including climate modeling, genomics, astronomy, and materials science.
 
-The University of Sydney provides its researchers with subsidised access to NCI. After creating an [NCI account and project](https://my.nci.org.au/mancini/) within the Sydney Scheme, you may visit [https://nci.sydney.edu.au/](https://nci.sydney.edu.au/) to request Service Units for your project (note: you must be on the University of Sydney Network/VPN).
+The University of Sydney provides its researchers with subsidised access to NCI through the [NCI-Sydney Scheme](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme). After creating an [NCI account and project](https://my.nci.org.au/mancini/) selecting 'University of Sydney' as the allocation scheme, you may visit [https://nci.sydney.edu.au/](https://nci.sydney.edu.au/) to request Service Units for your project (note: you must be on the University of Sydney Network/VPN).
 
 ## Support
 
-SIH is limited in the support it can provide for NCI Gadi users. If you are new to HPC and Gadi, we expect you will attend [NCI's Intro to Gadi](https://opus.nci.org.au/spaces/Help/pages/48497461/NCI+Training+and+Educational+Events) courses. Additionally, familiarise yourself with Gadi using the [NCI Gadi user guide](https://opus.nci.org.au/display/Help/Gadi+User+Guide):
+SIH is limited in the support it can provide for NCI Gadi users. If you are new to HPC and Gadi, we expect you will attend [NCI's Intro to Gadi](https://opus.nci.org.au/spaces/Help/pages/48497461/NCI+Training+and+Educational+Events) courses. Additionally, familiarise yourself with Gadi using the [NCI Gadi user guide](https://opus.nci.org.au/display/Help/Gadi+User+Guide).
+
+Live and self-directed training is also offered by SIH and NCI on HPC and data analysis topics:
 
 * [SIH training calendar](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub/workshops-and-training/training-calendar.html)
 * [NCI training calendar](https://opus.nci.org.au/display/Help/NCI+Training+and+Educational+Events)
@@ -25,6 +27,6 @@ For additional support, please contact the following people depending on your ne
 | Type of issue | Who | How | Details |
 |:---------|:----|:----|:---------|
 | Service unit allocation for running jobs. Request for g/data storage. | SIH | [Make a request](https://nci.sydney.edu.au/) | [Sydney Documentation](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme) |
-| A techincal issue with NCI. An error in your running job. New software installtion. | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide your error, log file, jobid. Versions or links for installs. |
-| A bug in an SIH pipeline | SIH | Submit an issue on Github | Provide details e.g. [this issue](https://github.com/Sydney-Informatics-Hub/Germline-StructuralV-nf/issues/65) |
+| A techincal issue with NCI. An error in your running job. New software installation. | NCI Helpdesk | [Log an NCI ticket](https://nci.org.au/users/nci-helpdesk) | Provide your error, log file, jobid. Versions or links for installs. |
+| A bug in an [SIH pipeline](https://github.com/Sydney-Informatics-Hub) | SIH | Submit an issue on Github | Provide details e.g. [this issue](https://github.com/Sydney-Informatics-Hub/Germline-StructuralV-nf/issues/65) |
 | General research computing or bioinformatics advice | SIH| [Log an SIH ticket](https://www.sydney.edu.au/research/facilities/sydney-informatics-hub.html) | Provide relevant context, errors, tool names, scripts |
