--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "NCI Gadi for USyd researchers"
+title: "NCI for USyd researchers"
 output:
   html_document:
     toc: false
@@ -7,11 +7,16 @@ output:
 
 ---
 
-This site contains instructions for how to access and utilise the [National Computing Infrastructure Gadi High Performance Computer](https://nci.org.au/our-systems), in the context of University of Sydney researchers. Please be mindful this is not an exhaustive resource for using the NCI Gadi HPC. It is only intended to orientate you to the system and navigate the comprehensive [NCI user documentation](https://opus.nci.org.au/spaces/Help/pages/12583138/NCI+Help).
+[National Computational Infrastructure (NCI)](https://nci.org.au/our-systems) is a services facility that provides high performance computing (HPC), cloud computing, and data services to Australian researchers.
 
-NCI systems are designed to handle complex computational tasks, such as simulations, data analysis, and modeling, for a wide range of scientific disciplines, including climate modeling, genomics, astronomy, and materials science.
+Our insitutional HPC 'Artemis' will be de-comissioned in August 2025. NCI has been chosen as the replacement computing platform. All staff and students with a valid University of Sydney unikey can access NCI computing time under the [NCI-Sydney Scheme](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme). 
 
-The University of Sydney provides its researchers with subsidised access to NCI through the [NCI-Sydney Scheme](https://sydneyuni.atlassian.net/wiki/spaces/RC/pages/3448733944/NCI-Sydney+Scheme). After creating an [NCI account and project](https://my.nci.org.au/mancini/) selecting 'University of Sydney' as the allocation scheme, you may visit [https://nci.sydney.edu.au/](https://nci.sydney.edu.au/) to request Service Units for your project (note: you must be on the University of Sydney Network/VPN).
+If HPC is not suitable for your workload, please consider NCI [cloud](https://opus.nci.org.au/display/Help/Nirin+Cloud+User+Guide) or [virtual research desktops](https://are.nci.org.au/). We are confident that your research computing will be well-supported by these platforms. 
+
+This site is focused on the use of NCI's [Gadi HPC](https://nci.org.au/our-systems/hpc-systems), in the context of University of Sydney researchers. 
+
+Please be mindful this is not an exhaustive resource for using Gadi. It is only intended to orient you to the system and navigate the comprehensive [NCI user documentation](https://opus.nci.org.au/spaces/Help/pages/12583138/NCI+Help).
+
 
 ## Support
 
