--- a/notebooks/12_walltime.qmd
+++ b/notebooks/12_walltime.qmd
@@ -93,7 +93,7 @@ In the below Artemis script example, a samplesheet is read in containing metadat
 
 The total walltime is 23 hours per sample, so the requested walltime in the below script is 240 hours (10 samples x 24 hours per sample)
 
-**There are multiple inefficiencies within this method**, giving rise to an inflated walltime requirement of ~ 1 day per samnple plus a very low overall CPU utilisation of the job.   
+**There are multiple inefficiencies within this method**, giving rise to an inflated walltime requirement of ~ 1 day per sample plus a very low overall CPU utilisation of the job.   
 
 
 ![](../fig/dummy-artemis-genomics-script.png)
@@ -155,7 +155,7 @@ Steps 3 and 4 from the Artemis workflow are now executed as 5 jobs:
 
 As you can see, our workflow which was one long-running single job with very poor overall CPU utilisation has now been split into 7 jobs. This may sound tedious, yet the massively improved walltime and CPU utilisation will pay off, and you will get to your results in a much faster turnaround time with fewer KSU expended. In this example, **walltime of 240 hours has been reduced to 10 hours!** 
 
- Step  | Task                               | Input                 | Walltime (hrs) | CPUs used per job | CPUs total |
+| Step  | Task                               | Input                 | Walltime (hrs) | CPUs used per job | CPUs total |
 |-------|------------------------------------|-----------------------|----------------|-------------------|------------|
 | 1     | Quality check                      | Raw data              | 2              | 20                | 20         |
 | 2     | Map to reference                   | Raw data              | 7              | 48                | 480        |
@@ -167,5 +167,44 @@ As you can see, our workflow which was one long-running single job with very poo
 
 
 
-### Example 2: TOM TBC
+### Example 2: Use checkpointing
 
+Many commonly used tools have built in option for only running an iterative process a given number of times and then saving the state of the process to a local file which can be reloaded from disk and then starting the process from where it previously left off. Its a good idea to check the documentation of the tool you are using to see if it has some kind of checkpointing functionality built in.
+
+
+```bash
+#!\bin\bash
+
+# Submit first PBS script and save the run id to JOB1.
+JOB1=$(qsub iteration1.pbs)
+
+# Submit second pbs script and tell it to run only after the first has COMPLETED.
+# Save the second run id to JOB2
+JOB2=$(qsub -W depend=afterok:$JOB2 iteration2.pbs)
+```
+
+You can chain as many iterations as necessary by continuing the above script.
+
+### Example 3: Add your own checkpointing to existing code
+
+Sometimes, you might be running your own software where there is no checkpointing available. If the code you are running is a long sequential pipeline where each step depends on the result of the previous one, one option is to add checkpointing yourself. This can usually be done by saving the current state of the variables in your code to disk and then reloading them before starting the next step. The process of doing this is called *serialisation* and many different popular python packages (e.g. Numpy, Pandas) are able to save their variables with a simple command, even native python variables (lists dicts etc. can be saved to disk using the `pickle` module).
+
+An example of how you might do this comes from an astronomy package known as the VAST Pipeline which reads thousands of sky images and makes multiple measurements from then followed by associating the stars in them with one another and then generating statistics on each star. This simple pipeline is easily split into multiple steps: 1. Read images, 2. Measure stars in images, 3. Associate stars with one another between images, 4. Generate statistics about the stars. At each step of the 
+
+Here is an example of the pipeline code between step 1 and 2. Step one is simple a function that returns a pandas dataframe containing the image information and step 2 is another function that reads that dataframe before further processing.
+
+```python
+example here
+```
+
+This can be split into python sripts `step1` and `step2` where the end of step1 involves writing the returned dataframe to disk and then the start of step2 involves reading the result from disk.
+
+```python
+#step1.py
+```
+
+```python
+#step2.py
+```
+
+These scripts can then be run sequentially using the method described in the previous example.
