--- a/notebooks/12_walltime.qmd
+++ b/notebooks/12_walltime.qmd
@@ -178,31 +178,39 @@ A simple of example of a script that uses checkpointing comes from the SIH devel
 Script from aigis is called `fine_tune_detectron2.py` and we can usually run it on gadi from a PBS script like so:
 
 ```bash
-gadi serial PBS script goes here.
+fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 20000 --output-dir /scratch/qc3/model_fine_tuning
 ```
 
-We can add an extra flag to this script to set the number of iterations we would like and the name of the checkpointed model we ould like to save by changing the script parameters in the above script to:
+The full run of this script with 20000 iterations takes around 60hrs, which is longer than the maximum walltime allowed on gadi, however
+we can change the number of iterations to 10000 and run the script twice with checkpointing.
+
+To do this we would change the parameters to the python script above to:
 
 ```bash
-updated python command goes here
+fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 10000 --output-dir /scratch/qc3/model_fine_tuning
 ```
 
 Then we can create a second pbs script that will pick up the output of the above and continue running for more iterations:
 ```bash
-continuation pbs script goes here
+
+
+
+fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 10000 --output-dir /scratch/qc3/model_fine_tuning --model-file /scratch/qc3/model_fine_tuning/MODEL_9999.pth
 ```
 
 We can split this into as many shorter chunks as we would like, each starting from the output of the previous iteration. These can then be run sequentially with `qsub` at the gadi command prompt like so: 
 
 ```bash
-sequential script submission 
+# Submit scripts sequentially at the command line
 
-qsub script
+# Below we save the jobid of the first script into $JOBID1
+$ JOBID1=$(qsub script1.pbs)
 
 # an extra command added to tell the later iterations of the script to only start when the previous one has completed. To do this we use the flag `-W #depend=afterok:<jobid>` when running qsub, which will tell qsub to put the job on the queue but to hold it until the task in <jobid> has completed.
 # You will need to get the jobid of the first script to pass to the command in the second qsub command.
 
-qsub -W depend=afterok:$JOB1 iteration2.pbs
+# Now we tell the scond script to only execute after the job in $JOBID1 has finished
+$qsub -W depend=afterok:$JOB1 iteration2.pbs
 ```
 
 You will see the second script will have flag `H` saying it has been held until script 1 has completed.
@@ -231,17 +239,63 @@ An example of how you might do this comes from an astronomy package known as the
 Here is an example of the pipeline code between step 1 and 2. Step one is simple a function that returns a pandas dataframe containing the image information and step 2 is another function that reads that dataframe before further processing.
 
 ```python
-example here
+# Imports and setup at top of pipeline script
+
+...
+
+# Pipeline Step 1: read images
+# Some call to a function that reads images into a pandas dataframe
+images_df = get_parallel_assoc_image_df(
+                image_file_paths, ...
+            )
+
+...
+
+# Pipeline Step 2: make measurements
+# Call a function that measures stars from our image data in images_df
+sources_df = get_sources(
+                images_df, ...
+)
+
+...
+
 ```
 
 This can be split into python sripts `step1` and `step2` where the end of step1 involves writing the returned dataframe to disk and then the start of step2 involves reading the result from disk.
 
 ```python
 #step1.py
+
+# Pipeline Step 1: read images
+# Some call to a function that reads images into a pandas dataframe
+images_df = get_parallel_assoc_image_df(
+                image_file_paths, ...
+            )
+
+...
+
+images_df.write_parquet('images_df.parquet')
+
 ```
 
 ```python
 #step2.py
+import pandas as pd
+
+# Possible config setup here.
+
+images_df = pd.read_parquet('images_df.parquet')
+
+# Pipeline Step 2: make measurements
+# Call a function that measures stars from our image data in images_df
+sources_df = get_sources(
+                images_df, ...
+)
+
+...
+
+pd.write_parquet(...)
+
 ```
 
 These scripts can then be run sequentially using the method described in the previous example.
