--- a/notebooks/12_walltime.qmd
+++ b/notebooks/12_walltime.qmd
@@ -167,56 +167,102 @@ As you can see, our workflow which was one long-running single job with very poo
 
 
 
-### Example 2: Use checkpointing
+### Example 2: A long running command with innate checkpointing
 
-Many commonly used tools have built in option for only running an iterative process a given number of times and then saving the state of the process to a local file which can be reloaded from disk and then starting the process from where it previously left off, a process that is commonly known as 'checkpointing'. Its a good idea to check the documentation of the tool you are using to see if it has some kind of checkpointing functionality built in since this greatly simplifies the process of splitting up long running tasks into smaller chunks.
+Many commonly used tools have built in option for limiting the number of iterations in repetitive processes  before saving the state of the process to a local file which can be reloaded from disk and then restarting the process from where it previously left off. This is commonly known as 'checkpointing'. It's a good idea to check the documentation of the tool you are using to see if it has some kind of checkpointing functionality built in since this greatly simplifies the process of splitting up long running tasks into smaller chunks.
 
-It is usually anyway recommended to use some kind of checkpointing in long running tasks because that way you can have a look at the output of them mid-way through to ensure that things are progressing as expected. Jobs can then be stopped mid way in case of unwanted results and restarted with different parameters, thus saving SU.
+It is anyway recommended practice to use some kind of checkpointing in long running tasks because that way you can have a look at the output of them mid-way through to ensure that things are progressing as expected. Jobs can then be stopped mid way in case of unwanted results and restarted with different parameters, thus saving resource allocations on your project.
 
-A simple of example of a script that uses checkpointing comes from the SIH developed `aigis`**LINK** package, that fine-tunes a detectron2 image segmentation model to detect trees and buildings in aerial imagery datasets. Such datasets can be quite large and the runtime for fine-tuning can take a long time, so the script has a flag that will save the current fine-tuned model to disk after a given number of iterations. Many machine-learning workflows provide this kind of functionality, and you can read details of how to implement it in your own ML pipelines using TensorFlow (here)**LINK** or PyTorch (here)**LINK**.
+Checkpointing can often be used in iterative minimisation jobs such as machine learning pipelines when training or fine-tuning a model. As such most machine learning packages will have options for checkpointing built-in. If you are building your own machine learning pipeline, simple instructions can be found for how to implement checkpointing in either TensorFlow [here](https://www.tensorflow.org/guide/checkpoint) or PyTorch [here](https://pytorch.org/torchft/checkpointing.html).
 
-Script from aigis is called `fine_tune_detectron2.py` and we can usually run it on gadi from a PBS script like so:
+In this example we'll demonstrate a script that uses checkpointing that comes from the SIH developed [`aigis`](https://github.com/Sydney-Informatics-Hub/aigis) package. `aigis` is a tool that fine-tunes a [`detectron2`](https://github.com/facebookresearch/detectron2) image segmentation machine learning model to detect trees and buildings in aerial imagery datasets.
+
+Aerial imagery datasets can be quite large and fine-tuning `detectron2` models using them can take a long time. Because of this the fine-tuning script has a flag that will only let it run for a given number of iterations and save the fine-tuned model to disk. The script can then be restarted with the previous output given as input.
+
+Below shows an example that runs the `aigis` script called `fine_tune_detectron2.py` on artemis from a PBS script that looks like:
 
 ```bash
-fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 20000 --output-dir /scratch/qc3/model_fine_tuning
+#! /bin/bash
+
+#PBS -P SIHNextgen
+#PBS -N fine_tune_example
+#PBS -l select=1:ncpus=1:mem=16gb:ngpus=1
+#PBS -l walltime=60:00:00
+#PBS -q defaultQ
+
+...   # Module loading and setup go here
+
+#Actually run the program
+fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 20000 --output-dir /project/aigis/model_fine_tuning
 ```
 
-The full run of this script with 20000 iterations takes around 60hrs, which is longer than the maximum walltime allowed on gadi, however
-we can change the number of iterations to 10000 and run the script twice with checkpointing.
+The full run of this script with 20000 iterations (`--max-iter 20000`) takes 60hrs, which is longer than the maximum walltime allowed on gadi, however we can change the number of iterations to 10000 and run the script twice with checkpointing.
 
-To do this we would change the parameters to the python script above to:
+To do this we would change the above PBS script above to (setting the walltime to 31 hours and max-iter to 10000):
 
+**iteration1.pbs**
 ```bash
+#! /bin/bash
+
+#PBS -P qc03
+#PBS -N fine_tune_example_s1
+#PBS -l walltime=31:00:00
+#PBS -l ncpus=1
+#PBS -l ngpus=1
+#PBS -l mem=16GB
+#PBS -q gpuvolta
+#PBS -l wd
+#PBS -lstorage=scratch/qc03
+
+# NOTE: We use 31 hours waltime rather than 30
+# to allow for overheads in running the script
+
+...   # Module loading and setup go here
+
 fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 10000 --output-dir /scratch/qc3/model_fine_tuning
 ```
 
-Then we can create a second pbs script that will pick up the output of the above and continue running for more iterations:
+Then we can create a second pbs script that will pick up the output of the above and continue running for 10000 more iterations, again allowing half the walltime:
+
+**iteration2.pbs**
 ```bash
+#! /bin/bash
 
+#PBS -P qc03
+#PBS -N fine_tune_example_s1
+#PBS -l walltime=31:00:00
+#PBS -l ncpus=1
+#PBS -l ngpus=1
+#PBS -l mem=16GB
+#PBS -q gpuvolta
+#PBS -l wd
+#PBS -lstorage=scratch/qc03
 
+...   # Module loading and setup go her - likely the same as above.
 
 fine_tune_detectron2.py --dataset-name MyDataSet --train-json MyDataSet_Train.json --test-json MyDataSet_Test.json --max-iter 10000 --output-dir /scratch/qc3/model_fine_tuning --model-file /scratch/qc3/model_fine_tuning/MODEL_9999.pth
 ```
 
-We can split this into as many shorter chunks as we would like, each starting from the output of the previous iteration. These can then be run sequentially with `qsub` at the gadi command prompt like so: 
+We can split this into as many shorter chunks as we would like, each starting from the output of the previous iteration. These can then be run sequentially by adding the flag `-W depend=afterok:<jobid>` to `qsub` for each script after the first at the gadi command prompt like so: 
 
-```bash
-# Submit scripts sequentially at the command line
+  1. Submit `iteration1.pbs` at the command line
+  ```bash
+  $ qsub iteration1.pbs
+  136554542.gadi-pbs
+  ```
 
-# Below we save the jobid of the first script into $JOBID1
-$ JOBID1=$(qsub script1.pbs)
+  2. gadi will return the jobid of the first script: `136554542.gadi-pbs`. You will need the jobid of the  first script to pass to the second qsub command.
 
-# an extra command added to tell the later iterations of the script to only start when the previous one has completed. To do this we use the flag `-W #depend=afterok:<jobid>` when running qsub, which will tell qsub to put the job on the queue but to hold it until the task in <jobid> has completed.
-# You will need to get the jobid of the first script to pass to the command in the second qsub command.
+  3. Now we tell the scond script to only execute after the job in the first script has finished:
+  ```bash
+  $ qsub -W depend=afterok:136554542.gadi-pbs iteration2.pbs
+  ```
 
-# Now we tell the scond script to only execute after the job in $JOBID1 has finished
-$qsub -W depend=afterok:$JOB1 iteration2.pbs
-```
+When you run `qsub` after this you will see the second script will have state `H` saying it has been held until `iteration1.pbs` has completed.
 
-You will see the second script will have flag `H` saying it has been held until script 1 has completed.
+If you find the task of entering all these qsub commands tedious you can also make a bash script which you only need to run once to submit all the scripts:
 
-If you find the task of entering all these qsub commands tediou you can also make a bash script like so:
-
+**submit_jobs_checkpointed.py**
 ```bash
 #!\bin\bash
 
@@ -230,14 +276,25 @@ JOB2=$(qsub -W depend=afterok:$JOB1 iteration2.pbs)
 
 You can of course chain as many iterations as necessary by continuing the above script.
 
+Please be aware when you submit multiple long-running job scripts in this way that you should check the output from time to time to ensure everything is going smoothly, and kill the running script if it isn't before fixing issues and restarting.
+
 ### Example 3: Add your own checkpointing to existing code
 
-Sometimes, you might be running your own software where there is no checkpointing available. If the code you are running is a long sequential pipeline where each step depends on the result of the previous one, one option is to add checkpointing yourself. This can usually be done by saving the current state of the variables in your code to disk and then reloading them before starting the next step. The process of doing this is called *serialisation* and many different popular python packages (e.g. Numpy, Pandas) are able to save their variables with a simple command, even native python variables (lists dicts etc. can be saved to disk using the `pickle` module).
+Sometimes, you might be running your own software which has no checkpointing available. In this case it still might be possible to add checkpointing to your code yourself with a minimum of fuss, particularly if the code you are running is a long sequential pipeline where each step depends on the result of the previous one.
 
-An example of how you might do this comes from an astronomy package known as the VAST Pipeline which reads thousands of sky images and makes multiple measurements from then followed by associating the stars in them with one another and then generating statistics on each star. This simple pipeline is easily split into multiple steps: 1. Read images, 2. Measure stars in images, 3. Associate stars with one another between images, 4. Generate statistics about the stars. At each step of the 
+An effective way to add checkpointing to existing code is by saving the current state of the variables in your code to disk and then reloading them before starting the next step. The process of doing this is called *serialisation* and many different popular python packages (e.g. Numpy, Pandas) are able to do it with a simple command. Even native python variables (lists dicts etc. can be saved to disk using the `pickle` module).
 
-Here is an example of the pipeline code between step 1 and 2. Step one is simple a function that returns a pandas dataframe containing the image information and step 2 is another function that reads that dataframe before further processing.
+An example of how you might do this comes from an astronomy pipeline which reads thousands of sky images and makes multiple measurements from then followed by associating the stars in them with one another and then generating statistics on each star. 
 
+This simple pipeline is easily split into multiple steps:
+  1. Read images
+  2. Measure stars in images
+  3. Associate stars with one another between images
+  4. Generate statistics about the stars.
+
+Here is a minimal example of the pipeline code between step 1 and 2. Step one is simple a function that returns a pandas DataFrame containing the image information and step 2 is another function that reads that dataframe before measureing stars in the image data from step 1.
+
+**`pipeline.py`**
 ```python
 # Imports and setup at top of pipeline script
 
@@ -255,7 +312,7 @@ images_df = get_parallel_assoc_image_df(
 # Call a function that measures stars from our image data in images_df
 sources_df = get_sources(
                 images_df, ...
-)
+             )
 
 ...
 
@@ -263,8 +320,8 @@ sources_df = get_sources(
 
 This can be split into python sripts `step1` and `step2` where the end of step1 involves writing the returned dataframe to disk and then the start of step2 involves reading the result from disk.
 
+**`step1.py`**
 ```python
-#step1.py
 
 # Pipeline Step 1: read images
 # Some call to a function that reads images into a pandas dataframe
@@ -278,8 +335,8 @@ images_df.write_parquet('images_df.parquet')
 
 ```
 
+**`step2.py`**
 ```python
-#step2.py
 import pandas as pd
 
 # Possible config setup here.
